# auth2-system

./: .dockerignore  .env  .gitignore  .railwayignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build.sh  deploy-production.sh  dev.sh  generate-client.sh  nixpacks.toml  openapi.json  railway.json
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  env.example  nixpacks.toml  railway.json
backend/src/: main.rs  utils.rs
backend/src/middleware/: auth.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  protected.rs
frontend/: .env.production  .gitignore  README.md  env.production  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: authUtils.ts  use-toast.ts  useAuth.tsx  useTheme.tsx  useThemeContext.ts
frontend/src/pages/: AdminDashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/ts-client/: api.ts  configuration.ts
frontend/ts-client/docs/: ProtectedApi.md  RegisterRequest.md  RegisterResponse.md
src/: main.rs  utils.rs
src/middleware/: auth.rs
src/models/: user.rs
src/openapi/models/: LoginResponse.ts  User.ts
src/openapi/services/: AuthService.ts
src/routes/: auth.rs  mod.rs  protected.rs  register.rs  user_route.rs
ts-client/: api.ts  base.ts  client.ts  common.ts  index.ts
ts-client/.openapi-generator/: FILES
ts-client/docs/: AuthApi.md  LoginResponse.md  User.md  UserResponse.md
